# geosensors-app

./: .dockerignore  .env  .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  app.py  compose.yml  config.py  docker-compose.yml  hse_geosensors.py  pyproject.toml
bd-loaders/: README.md
bd-loaders/loader/: .env.example  Dockerfile  config.py  ingest_frost.py  pyproject.toml
bd-loaders/loader-rudn/: .env.example  Dockerfile  config.py  ingest_frost.py  pyproject.toml
bd-loaders/sensor-community/: Dockerfile
bd-loaders/sensor-community/FrostServer/: compose.yml
bd-loaders/sensor-community/app/: config.json  uploader.py
frontend/: README.md  app.py  config.py  docker-compose.yml  pyproject.toml
frontend/services/: __init__.py  sensors.py
frontend/templates/: dashboard.html
sensor-community/: .env.example  README.md
sensor-community/app/: main.py
services/: __init__.py  gis.py  sensors.py
static/css/: dashboard.css  map.css
static/js/: dashboard.js
templates/map_partials/: css_inject.html  js_inject.html
