[project]
name = "hse-geosensors"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.1",
    "folium>=0.20.0",
    "pyproj>=3.7.1",
    "shapely>=2.1.1",
    "plotly>=5.18.0",
    "requests>=2.31.0",
    "pandas>=1.5.0"
]
