[project]
name = "hse-geosensors"
version = "0.1.0"
description = "SensorThings map + dashboard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.1",
    "folium>=0.20.0",
    "requests>=2.31.0",
    "shapely>=2.0.0",
    "pyproj>=3.5.0",
    "gunicorn>=21.2"
]
